# docs/swagger.yaml
@@ -14,6 +14,11 @@ definitions:
       refresh_token:
         type: string
     type: object
+  auth.RefreshRequest:
+    properties:
+      refresh_token:
+        type: string
+    type: object
   users.CreateUserRequest:
     properties:
       email:
@@ -60,6 +65,39 @@ paths:
           schema:
             $ref: '#/definitions/auth.LoginResponse'
       summary: Login User
+      tags:
+      - auth
+  /auth/logout:
+    post:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: Logout User
+      tags:
+      - auth
+  /auth/refresh:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Refresh Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/auth.RefreshRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/auth.LoginResponse'
+      summary: Refresh Token
       tags:
       - auth
   /users:
